--- a/archives/toutiao-search/2024-04-20.md
+++ b/archives/toutiao-search/2024-04-20.md
@@ -1,65 +1,78 @@
 # 2024-04-20
 
-共 280 条
+共 293 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 20 2024 19:00:39 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 20 2024 20:00:45 GMT+0800 (China Standard Time) -->
 1. [广东清远特大暴雨高铁车厢内进水](https://so.toutiao.com/search?keyword=广东清远特大暴雨高铁车厢内进水)
-1. [韩国人在泰抢劫被抓后竟称是中国人](https://so.toutiao.com/search?keyword=韩国人在泰抢劫被抓后竟称是中国人)
+1. [迪拜暴雨过后像“外星人入侵”](https://so.toutiao.com/search?keyword=迪拜暴雨过后像“外星人入侵”)
 1. [我国载重最大货运列车今将开行](https://so.toutiao.com/search?keyword=我国载重最大货运列车今将开行)
 1. [10秒延时视频记录佛山暴雨过程](https://so.toutiao.com/search?keyword=10秒延时视频记录佛山暴雨过程)
 1. [准新娘自杀身亡 订婚彩礼仅返还18万](https://so.toutiao.com/search?keyword=准新娘自杀身亡+订婚彩礼仅返还18万)
-1. [官方通报西安地铁10号线测试时追尾](https://so.toutiao.com/search?keyword=官方通报西安地铁10号线测试时追尾)
-1. [直击广东多地强降雨救援现场](https://so.toutiao.com/search?keyword=直击广东多地强降雨救援现场)
 1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
-1. [湖南失踪15岁男孩遗体已找到](https://so.toutiao.com/search?keyword=湖南失踪15岁男孩遗体已找到)
+1. [直击广东多地强降雨救援现场](https://so.toutiao.com/search?keyword=直击广东多地强降雨救援现场)
 1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
-1. [9岁男孩坠亡前曾被罚抄词一万遍](https://so.toutiao.com/search?keyword=9岁男孩坠亡前曾被罚抄词一万遍)
+1. [湖南失踪15岁男孩遗体已找到](https://so.toutiao.com/search?keyword=湖南失踪15岁男孩遗体已找到)
+1. [哈尔滨啤酒客服回应检出呕吐毒素](https://so.toutiao.com/search?keyword=哈尔滨啤酒客服回应检出呕吐毒素)
 1. [西安地铁试车时发生事故](https://so.toutiao.com/search?keyword=西安地铁试车时发生事故)
-1. [美媒：伊朗袭击以暴露武器库实力](https://so.toutiao.com/search?keyword=美媒：伊朗袭击以暴露武器库实力)
+1. [9岁男孩坠亡前曾被罚抄词一万遍](https://so.toutiao.com/search?keyword=9岁男孩坠亡前曾被罚抄词一万遍)
+1. [重庆燃气集团新任一把手简历公布](https://so.toutiao.com/search?keyword=重庆燃气集团新任一把手简历公布)
+1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
 1. [9岁坠亡男孩与母亲最后对话曝光](https://so.toutiao.com/search?keyword=9岁坠亡男孩与母亲最后对话曝光)
-1. [福岛核污染水储水罐内表面被腐蚀](https://so.toutiao.com/search?keyword=福岛核污染水储水罐内表面被腐蚀)
-1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
+1. [美媒：伊朗袭击以暴露武器库实力](https://so.toutiao.com/search?keyword=美媒：伊朗袭击以暴露武器库实力)
+1. [雷军看不懂张朝阳送的物理书](https://so.toutiao.com/search?keyword=雷军看不懂张朝阳送的物理书)
 1. [多家电商平台已下架哈尔滨麦道啤酒](https://so.toutiao.com/search?keyword=多家电商平台已下架哈尔滨麦道啤酒)
-1. [广东韶关暴雨 墙被水流冲倒](https://so.toutiao.com/search?keyword=广东韶关暴雨+墙被水流冲倒)
-1. [闪电击中房顶 院子里瞬间全是火花](https://so.toutiao.com/search?keyword=闪电击中房顶+院子里瞬间全是火花)
+1. [以色列为何选择此时袭击伊朗](https://so.toutiao.com/search?keyword=以色列为何选择此时袭击伊朗)
 1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
+1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
+1. [闪电击中房顶 院子里瞬间全是火花](https://so.toutiao.com/search?keyword=闪电击中房顶+院子里瞬间全是火花)
+1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
+1. [成都通报“市民反映燃气费用暴涨”](https://so.toutiao.com/search?keyword=成都通报“市民反映燃气费用暴涨”)
+1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
+1. [媒体批菲方拿中国造的船当军演靶船](https://so.toutiao.com/search?keyword=媒体批菲方拿中国造的船当军演靶船)
+1. [浪姐5陈丽君杀疯了](https://so.toutiao.com/search?keyword=浪姐5陈丽君杀疯了)
+1. [广东韶关暴雨 墙被水流冲倒](https://so.toutiao.com/search?keyword=广东韶关暴雨+墙被水流冲倒)
+1. [军属陆续抵达唐山舰活动现场](https://so.toutiao.com/search?keyword=军属陆续抵达唐山舰活动现场)
+1. [中国互联网30年 哪些产品昙花一现](https://so.toutiao.com/search?keyword=中国互联网30年+哪些产品昙花一现)
+1. [官方再通报老人给城管下跪：深刻反省](https://so.toutiao.com/search?keyword=官方再通报老人给城管下跪：深刻反省)
+1. [王曼昱4-2张本美和 晋级女单决赛](https://so.toutiao.com/search?keyword=王曼昱4-2张本美和+晋级女单决赛)
+1. [极氪CEO谈埃尔法价格不合理](https://so.toutiao.com/search?keyword=极氪CEO谈埃尔法价格不合理)
+1. [福岛核污染水储水罐内表面被腐蚀](https://so.toutiao.com/search?keyword=福岛核污染水储水罐内表面被腐蚀)
+1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
+1. [四川乐山一石头卖出16.8万元](https://so.toutiao.com/search?keyword=四川乐山一石头卖出16.8万元)
+1. [广东江西共30条河流发生超警洪水](https://so.toutiao.com/search?keyword=广东江西共30条河流发生超警洪水)
+1. [欧尔班：北约距向乌派兵仅一步之遥](https://so.toutiao.com/search?keyword=欧尔班：北约距向乌派兵仅一步之遥)
+1. [马斯克确认推迟访问印度](https://so.toutiao.com/search?keyword=马斯克确认推迟访问印度)
+1. [广东肇庆暴雨后街边出现大量黄泥水](https://so.toutiao.com/search?keyword=广东肇庆暴雨后街边出现大量黄泥水)
+1. [女子欲跳河轻生 路过警察果断拉住](https://so.toutiao.com/search?keyword=女子欲跳河轻生+路过警察果断拉住)
+1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
+1. [青海多地禁种人工繁育品冬虫夏草](https://so.toutiao.com/search?keyword=青海多地禁种人工繁育品冬虫夏草)
+1. [乌军用无人机载温压弹猛轰俄军](https://so.toutiao.com/search?keyword=乌军用无人机载温压弹猛轰俄军)
+1. [新人结婚遭隔壁邻居播放哀乐](https://so.toutiao.com/search?keyword=新人结婚遭隔壁邻居播放哀乐)
+1. [高速上两车发生事故 多辆车来帮忙](https://so.toutiao.com/search?keyword=高速上两车发生事故+多辆车来帮忙)
+1. [女子提新车第一天在车里发现小奶猫](https://so.toutiao.com/search?keyword=女子提新车第一天在车里发现小奶猫)
+1. [专家分享科学防癌要点](https://so.toutiao.com/search?keyword=专家分享科学防癌要点)
+1. [记者亲身体验“王婆说媒”](https://so.toutiao.com/search?keyword=记者亲身体验“王婆说媒”)
+1. [官方通报西安地铁10号线测试时追尾](https://so.toutiao.com/search?keyword=官方通报西安地铁10号线测试时追尾)
+1. [韩国人在泰抢劫被抓后竟称是中国人](https://so.toutiao.com/search?keyword=韩国人在泰抢劫被抓后竟称是中国人)
 1. [广东省防总：将撤离危险区域人员](https://so.toutiao.com/search?keyword=广东省防总：将撤离危险区域人员)
 1. [天窗排水孔堵塞 一家人在车内淋雨](https://so.toutiao.com/search?keyword=天窗排水孔堵塞+一家人在车内淋雨)
 1. [越南女首富被判死刑引发寻宝热潮](https://so.toutiao.com/search?keyword=越南女首富被判死刑引发寻宝热潮)
-1. [成都通报“市民反映燃气费用暴涨”](https://so.toutiao.com/search?keyword=成都通报“市民反映燃气费用暴涨”)
-1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
 1. [小车变道致两车相撞还冲开护栏](https://so.toutiao.com/search?keyword=小车变道致两车相撞还冲开护栏)
-1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
 1. [广东省32个水文站超警戒水位](https://so.toutiao.com/search?keyword=广东省32个水文站超警戒水位)
 1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
-1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
-1. [广东江西共30条河流发生超警洪水](https://so.toutiao.com/search?keyword=广东江西共30条河流发生超警洪水)
-1. [浪姐5陈丽君杀疯了](https://so.toutiao.com/search?keyword=浪姐5陈丽君杀疯了)
-1. [迪拜暴雨过后像“外星人入侵”](https://so.toutiao.com/search?keyword=迪拜暴雨过后像“外星人入侵”)
-1. [极氪CEO谈埃尔法价格不合理](https://so.toutiao.com/search?keyword=极氪CEO谈埃尔法价格不合理)
-1. [中国互联网30年 哪些产品昙花一现](https://so.toutiao.com/search?keyword=中国互联网30年+哪些产品昙花一现)
 1. [官方：突出抓好城市内涝等防范应对](https://so.toutiao.com/search?keyword=官方：突出抓好城市内涝等防范应对)
-1. [女子提新车第一天在车里发现小奶猫](https://so.toutiao.com/search?keyword=女子提新车第一天在车里发现小奶猫)
-1. [女子欲跳河轻生 路过警察果断拉住](https://so.toutiao.com/search?keyword=女子欲跳河轻生+路过警察果断拉住)
 1. [吉林长春市区发生三车相撞事故](https://so.toutiao.com/search?keyword=吉林长春市区发生三车相撞事故)
-1. [马斯克确认推迟访问印度](https://so.toutiao.com/search?keyword=马斯克确认推迟访问印度)
-1. [四川乐山一石头卖出16.8万元](https://so.toutiao.com/search?keyword=四川乐山一石头卖出16.8万元)
-1. [媒体批菲方拿中国造的船当军演靶船](https://so.toutiao.com/search?keyword=媒体批菲方拿中国造的船当军演靶船)
-1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
 1. [孩子在家门口玩耍遭毒蛇咬伤](https://so.toutiao.com/search?keyword=孩子在家门口玩耍遭毒蛇咬伤)
 1. [任家萱产后首次亮相专访活动](https://so.toutiao.com/search?keyword=任家萱产后首次亮相专访活动)
 1. [网约车司机问乘客自己能否吃点东西](https://so.toutiao.com/search?keyword=网约车司机问乘客自己能否吃点东西)
-1. [广东肇庆暴雨后街边出现大量黄泥水](https://so.toutiao.com/search?keyword=广东肇庆暴雨后街边出现大量黄泥水)
 1. [巴方向投赞成票的安理会成员国致敬](https://so.toutiao.com/search?keyword=巴方向投赞成票的安理会成员国致敬)
 1. [潍坊风筝节年轻人把发疯早八放上天](https://so.toutiao.com/search?keyword=潍坊风筝节年轻人把发疯早八放上天)
 1. [全红婵夺金后看到家人在现场很震惊](https://so.toutiao.com/search?keyword=全红婵夺金后看到家人在现场很震惊)
 1. [女子桥边哭泣留下手机后跳桥](https://so.toutiao.com/search?keyword=女子桥边哭泣留下手机后跳桥)
 1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
 1. [大妈排队领鸡蛋遭大爷摸臀猥亵](https://so.toutiao.com/search?keyword=大妈排队领鸡蛋遭大爷摸臀猥亵)
-1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
 1. [福建常务副省长郭宁宁兼任新职务](https://so.toutiao.com/search?keyword=福建常务副省长郭宁宁兼任新职务)
-1. [青海多地禁种人工繁育品冬虫夏草](https://so.toutiao.com/search?keyword=青海多地禁种人工繁育品冬虫夏草)
 1. [日元贬值 海外游客涌入日本扫货](https://so.toutiao.com/search?keyword=日元贬值+海外游客涌入日本扫货)
 1. [媒体：调休或仍是目前最优解](https://so.toutiao.com/search?keyword=媒体：调休或仍是目前最优解)
 1. [女演员为“男友”网上诈骗粉丝被捕](https://so.toutiao.com/search?keyword=女演员为“男友”网上诈骗粉丝被捕)
