--- a/archives/toutiao-search/2024-04-20.md
+++ b/archives/toutiao-search/2024-04-20.md
@@ -1,68 +1,81 @@
 # 2024-04-20
 
-共 307 条
+共 319 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 20 2024 21:00:48 GMT+0800 (China Standard Time) -->
-1. [广东清远特大暴雨高铁车厢内进水](https://so.toutiao.com/search?keyword=广东清远特大暴雨高铁车厢内进水)
-1. [以色列为何选择此时袭击伊朗](https://so.toutiao.com/search?keyword=以色列为何选择此时袭击伊朗)
-1. [我国载重最大货运列车今将开行](https://so.toutiao.com/search?keyword=我国载重最大货运列车今将开行)
+<!-- 最后更新时间 Sat Apr 20 2024 22:00:36 GMT+0800 (China Standard Time) -->
 1. [10秒延时视频记录佛山暴雨过程](https://so.toutiao.com/search?keyword=10秒延时视频记录佛山暴雨过程)
-1. [重庆一女歌手寿宴表演时摔倒去世](https://so.toutiao.com/search?keyword=重庆一女歌手寿宴表演时摔倒去世)
-1. [准新娘自杀身亡 订婚彩礼仅返还18万](https://so.toutiao.com/search?keyword=准新娘自杀身亡+订婚彩礼仅返还18万)
-1. [直击广东多地强降雨救援现场](https://so.toutiao.com/search?keyword=直击广东多地强降雨救援现场)
-1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
-1. [重庆燃气集团新任一把手简历公布](https://so.toutiao.com/search?keyword=重庆燃气集团新任一把手简历公布)
+1. [官方再通报老人给城管下跪：深刻反省](https://so.toutiao.com/search?keyword=官方再通报老人给城管下跪：深刻反省)
+1. [春耕新事知多少](https://so.toutiao.com/search?keyword=春耕新事知多少)
+1. [以色列为何选择此时袭击伊朗](https://so.toutiao.com/search?keyword=以色列为何选择此时袭击伊朗)
 1. [女子100米栏吴艳妮创赛季最好成绩](https://so.toutiao.com/search?keyword=女子100米栏吴艳妮创赛季最好成绩)
-1. [9岁男孩坠亡前曾被罚抄词一万遍](https://so.toutiao.com/search?keyword=9岁男孩坠亡前曾被罚抄词一万遍)
-1. [西安地铁试车时发生事故](https://so.toutiao.com/search?keyword=西安地铁试车时发生事故)
-1. [美媒：伊朗袭击以暴露武器库实力](https://so.toutiao.com/search?keyword=美媒：伊朗袭击以暴露武器库实力)
+1. [直击广东多地强降雨救援现场](https://so.toutiao.com/search?keyword=直击广东多地强降雨救援现场)
+1. [男子去取钱未拆封的1万里少了300](https://so.toutiao.com/search?keyword=男子去取钱未拆封的1万里少了300)
+1. [重庆燃气集团新任一把手简历公布](https://so.toutiao.com/search?keyword=重庆燃气集团新任一把手简历公布)
+1. [百威回应麦道啤酒被检出呕吐毒素](https://so.toutiao.com/search?keyword=百威回应麦道啤酒被检出呕吐毒素)
+1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
 1. [9岁坠亡男孩与母亲最后对话曝光](https://so.toutiao.com/search?keyword=9岁坠亡男孩与母亲最后对话曝光)
-1. [湖南失踪15岁男孩遗体已找到](https://so.toutiao.com/search?keyword=湖南失踪15岁男孩遗体已找到)
-1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
-1. [哈尔滨啤酒客服回应检出呕吐毒素](https://so.toutiao.com/search?keyword=哈尔滨啤酒客服回应检出呕吐毒素)
-1. [媒体批菲方拿中国造的船当军演靶船](https://so.toutiao.com/search?keyword=媒体批菲方拿中国造的船当军演靶船)
+1. [准新娘自杀身亡 订婚彩礼仅返还18万](https://so.toutiao.com/search?keyword=准新娘自杀身亡+订婚彩礼仅返还18万)
+1. [重庆一女歌手寿宴表演时摔倒去世](https://so.toutiao.com/search?keyword=重庆一女歌手寿宴表演时摔倒去世)
+1. [西南医院一男子坠楼身亡？重庆辟谣](https://so.toutiao.com/search?keyword=西南医院一男子坠楼身亡？重庆辟谣)
+1. [9岁男孩坠亡前曾被罚抄词一万遍](https://so.toutiao.com/search?keyword=9岁男孩坠亡前曾被罚抄词一万遍)
 1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
-1. [多家电商平台已下架哈尔滨麦道啤酒](https://so.toutiao.com/search?keyword=多家电商平台已下架哈尔滨麦道啤酒)
-1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
+1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
 1. [马龙4-0横扫王楚钦 晋级男单决赛](https://so.toutiao.com/search?keyword=马龙4-0横扫王楚钦+晋级男单决赛)
+1. [湖南失踪15岁男孩遗体已找到](https://so.toutiao.com/search?keyword=湖南失踪15岁男孩遗体已找到)
+1. [洪秀柱率团抵达深圳](https://so.toutiao.com/search?keyword=洪秀柱率团抵达深圳)
+1. [广东防汛应急响应提升至Ⅱ级](https://so.toutiao.com/search?keyword=广东防汛应急响应提升至Ⅱ级)
+1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
+1. [医院通报男子坠亡：不存在医疗纠纷](https://so.toutiao.com/search?keyword=医院通报男子坠亡：不存在医疗纠纷)
+1. [3Q大战14年后周鸿祎马化腾握手](https://so.toutiao.com/search?keyword=3Q大战14年后周鸿祎马化腾握手)
+1. [周鸿祎：雷军说小米SU7不适合我](https://so.toutiao.com/search?keyword=周鸿祎：雷军说小米SU7不适合我)
+1. [美媒：伊朗袭击以暴露武器库实力](https://so.toutiao.com/search?keyword=美媒：伊朗袭击以暴露武器库实力)
+1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
+1. [西安地铁试车时发生事故](https://so.toutiao.com/search?keyword=西安地铁试车时发生事故)
+1. [马龙：胜利的秘诀是放松](https://so.toutiao.com/search?keyword=马龙：胜利的秘诀是放松)
+1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
+1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
+1. [中国互联网30年 哪些产品昙花一现](https://so.toutiao.com/search?keyword=中国互联网30年+哪些产品昙花一现)
+1. [军属陆续抵达唐山舰活动现场](https://so.toutiao.com/search?keyword=军属陆续抵达唐山舰活动现场)
+1. [媒体分析赖清德的人事布局](https://so.toutiao.com/search?keyword=媒体分析赖清德的人事布局)
+1. [多家电商平台已下架哈尔滨麦道啤酒](https://so.toutiao.com/search?keyword=多家电商平台已下架哈尔滨麦道啤酒)
+1. [马斯克确认推迟访问印度](https://so.toutiao.com/search?keyword=马斯克确认推迟访问印度)
+1. [广东韶关暴雨 墙被水流冲倒](https://so.toutiao.com/search?keyword=广东韶关暴雨+墙被水流冲倒)
+1. [哈尔滨啤酒客服回应检出呕吐毒素](https://so.toutiao.com/search?keyword=哈尔滨啤酒客服回应检出呕吐毒素)
+1. [美国为何阻碍巴勒斯坦“入联”](https://so.toutiao.com/search?keyword=美国为何阻碍巴勒斯坦“入联”)
+1. [广东清远寨岗镇突发洪水淹没街道](https://so.toutiao.com/search?keyword=广东清远寨岗镇突发洪水淹没街道)
+1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
+1. [周杰伦和杰迷双向奔赴](https://so.toutiao.com/search?keyword=周杰伦和杰迷双向奔赴)
+1. [华南强降雨何时减弱](https://so.toutiao.com/search?keyword=华南强降雨何时减弱)
+1. [媒体批菲方拿中国造的船当军演靶船](https://so.toutiao.com/search?keyword=媒体批菲方拿中国造的船当军演靶船)
+1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
+1. [记者亲身体验“王婆说媒”](https://so.toutiao.com/search?keyword=记者亲身体验“王婆说媒”)
+1. [价值12万的自行车上路被撞](https://so.toutiao.com/search?keyword=价值12万的自行车上路被撞)
+1. [浪姐5陈丽君杀疯了](https://so.toutiao.com/search?keyword=浪姐5陈丽君杀疯了)
+1. [天窗排水孔堵塞 一家人在车内淋雨](https://so.toutiao.com/search?keyword=天窗排水孔堵塞+一家人在车内淋雨)
+1. [四川乐山一石头卖出16.8万元](https://so.toutiao.com/search?keyword=四川乐山一石头卖出16.8万元)
+1. [广东清远特大暴雨高铁车厢内进水](https://so.toutiao.com/search?keyword=广东清远特大暴雨高铁车厢内进水)
+1. [我国载重最大货运列车今将开行](https://so.toutiao.com/search?keyword=我国载重最大货运列车今将开行)
 1. [菲律宾接收从印度订购的反舰导弹](https://so.toutiao.com/search?keyword=菲律宾接收从印度订购的反舰导弹)
 1. [广东江西共30条河流发生超警洪水](https://so.toutiao.com/search?keyword=广东江西共30条河流发生超警洪水)
 1. [成都通报“市民反映燃气费用暴涨”](https://so.toutiao.com/search?keyword=成都通报“市民反映燃气费用暴涨”)
-1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
-1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
-1. [官方再通报老人给城管下跪：深刻反省](https://so.toutiao.com/search?keyword=官方再通报老人给城管下跪：深刻反省)
-1. [周杰伦和杰迷双向奔赴](https://so.toutiao.com/search?keyword=周杰伦和杰迷双向奔赴)
 1. [王曼昱4-2张本美和 晋级女单决赛](https://so.toutiao.com/search?keyword=王曼昱4-2张本美和+晋级女单决赛)
-1. [中国互联网30年 哪些产品昙花一现](https://so.toutiao.com/search?keyword=中国互联网30年+哪些产品昙花一现)
 1. [我国首次成功批量生产碳-14同位素](https://so.toutiao.com/search?keyword=我国首次成功批量生产碳-14同位素)
-1. [3Q大战14年后周鸿祎马化腾握手](https://so.toutiao.com/search?keyword=3Q大战14年后周鸿祎马化腾握手)
-1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
 1. [小米SU7两周超详细体验](https://so.toutiao.com/search?keyword=小米SU7两周超详细体验)
-1. [马斯克确认推迟访问印度](https://so.toutiao.com/search?keyword=马斯克确认推迟访问印度)
-1. [医院通报男子坠亡：不存在医疗纠纷](https://so.toutiao.com/search?keyword=医院通报男子坠亡：不存在医疗纠纷)
-1. [天窗排水孔堵塞 一家人在车内淋雨](https://so.toutiao.com/search?keyword=天窗排水孔堵塞+一家人在车内淋雨)
 1. [雷军看不懂张朝阳送的物理书](https://so.toutiao.com/search?keyword=雷军看不懂张朝阳送的物理书)
-1. [广东防汛应急响应提升至Ⅱ级](https://so.toutiao.com/search?keyword=广东防汛应急响应提升至Ⅱ级)
 1. [乌军用无人机载温压弹猛轰俄军](https://so.toutiao.com/search?keyword=乌军用无人机载温压弹猛轰俄军)
 1. [闪电击中房顶 院子里瞬间全是火花](https://so.toutiao.com/search?keyword=闪电击中房顶+院子里瞬间全是火花)
-1. [广东韶关暴雨 墙被水流冲倒](https://so.toutiao.com/search?keyword=广东韶关暴雨+墙被水流冲倒)
 1. [媒体批评美国阻碍巴勒斯坦“入联”](https://so.toutiao.com/search?keyword=媒体批评美国阻碍巴勒斯坦“入联”)
-1. [记者亲身体验“王婆说媒”](https://so.toutiao.com/search?keyword=记者亲身体验“王婆说媒”)
 1. [美媒曝以总理与德外长会谈时起争执](https://so.toutiao.com/search?keyword=美媒曝以总理与德外长会谈时起争执)
 1. [乌克兰一地遭袭 已致9人死亡](https://so.toutiao.com/search?keyword=乌克兰一地遭袭+已致9人死亡)
-1. [浪姐5陈丽君杀疯了](https://so.toutiao.com/search?keyword=浪姐5陈丽君杀疯了)
-1. [四川乐山一石头卖出16.8万元](https://so.toutiao.com/search?keyword=四川乐山一石头卖出16.8万元)
 1. [泰山队助教：受伤球员在陆续康复](https://so.toutiao.com/search?keyword=泰山队助教：受伤球员在陆续康复)
 1. [迪拜暴雨过后像“外星人入侵”](https://so.toutiao.com/search?keyword=迪拜暴雨过后像“外星人入侵”)
-1. [军属陆续抵达唐山舰活动现场](https://so.toutiao.com/search?keyword=军属陆续抵达唐山舰活动现场)
 1. [极氪CEO谈埃尔法价格不合理](https://so.toutiao.com/search?keyword=极氪CEO谈埃尔法价格不合理)
 1. [福岛核污染水储水罐内表面被腐蚀](https://so.toutiao.com/search?keyword=福岛核污染水储水罐内表面被腐蚀)
 1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
 1. [欧尔班：北约距向乌派兵仅一步之遥](https://so.toutiao.com/search?keyword=欧尔班：北约距向乌派兵仅一步之遥)
 1. [广东肇庆暴雨后街边出现大量黄泥水](https://so.toutiao.com/search?keyword=广东肇庆暴雨后街边出现大量黄泥水)
 1. [女子欲跳河轻生 路过警察果断拉住](https://so.toutiao.com/search?keyword=女子欲跳河轻生+路过警察果断拉住)
-1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
 1. [青海多地禁种人工繁育品冬虫夏草](https://so.toutiao.com/search?keyword=青海多地禁种人工繁育品冬虫夏草)
 1. [新人结婚遭隔壁邻居播放哀乐](https://so.toutiao.com/search?keyword=新人结婚遭隔壁邻居播放哀乐)
 1. [高速上两车发生事故 多辆车来帮忙](https://so.toutiao.com/search?keyword=高速上两车发生事故+多辆车来帮忙)
@@ -141,7 +154,6 @@
 1. [江西婺源通报“拦车收费”](https://so.toutiao.com/search?keyword=江西婺源通报“拦车收费”)
 1. [重庆通报燃气费多计多收问题](https://so.toutiao.com/search?keyword=重庆通报燃气费多计多收问题)
 1. [英格拉姆不知道CJ给全队发了短信](https://so.toutiao.com/search?keyword=英格拉姆不知道CJ给全队发了短信)
-1. [价值12万的自行车上路被撞](https://so.toutiao.com/search?keyword=价值12万的自行车上路被撞)
 1. [深度体验极氪009光辉版](https://so.toutiao.com/search?keyword=深度体验极氪009光辉版)
 1. [TVB黄金配角陈狄克出殡](https://so.toutiao.com/search?keyword=TVB黄金配角陈狄克出殡)
 1. [林志颖现场观战F1为周冠宇助威](https://so.toutiao.com/search?keyword=林志颖现场观战F1为周冠宇助威)
